Fix landing page overlap

--- a/src/frontend/src/pages/LandingPage/LandingPage.scss
+++ b/src/frontend/src/pages/LandingPage/LandingPage.scss
@@ -4,22 +4,24 @@
   min-height: calc(100vh - $header-height);
 
   @include breakpoint(0 map-get($grid-breakpoints, 'xxl')) {
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-    }
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
   @include breakpoint(map-get($grid-breakpoints, 'xxl')) {
     background-repeat: no-repeat;
     background-image: url(/src/assets/public_homepage/hero.svg);
     background-position: 90% 100%;
   }
-  
-  @include breakpoint(map-get($grid-breakpoints, 'xxl') map-get($grid-breakpoints, 'tv')) {
-     flex-direction: row;
-     justify-content: left;
-     align-items: center;
-     .hero-content {
+
+  @include breakpoint(
+    map-get($grid-breakpoints, 'xxl') map-get($grid-breakpoints, 'tv')
+  ) {
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    .hero-content {
       max-width: 50ch;
     }
   }
@@ -30,7 +32,7 @@
   justify-content: center;
   flex-direction: column;
   max-width: 90%;
-  
+
   @include breakpoint(map-get($grid-breakpoints, 'xxl')) {
     max-width: 80ch;
   }
@@ -69,7 +71,6 @@
 }
 
 .info-section {
-  
   @include breakpoint(0 map-get($grid-breakpoints, 'xl')) {
     display: flex;
     flex-direction: column;
